--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -34,6 +34,9 @@ on fs
     chown system system /dev/ion
     install_keyring
 
+    # enable USB OTG support
+    write /sys/class/power_supply/usb/otg_switch 1
+	
 # Separate copy needed to use /sbin/linker64 instead of /system/bin/linker64
 service sbinqseecomd /sbin/qseecomd
     disabled
